[gd_scene load_steps=5 format=2]

[ext_resource path="res://Console/console.gd" type="Script" id=1]
[ext_resource path="res://Shared/fira_code_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://Console/FiraCode-Retina.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 9
font_data = ExtResource( 3 )

[node name="Console" type="Control"]
margin_top = 288.0
margin_right = 608.0
margin_bottom = 342.0
rect_min_size = Vector2( 608, 54 )
script = ExtResource( 1 )

[node name="Input" type="LineEdit" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
max_length = 15
selecting_enabled = false
caret_blink = true
caret_blink_speed = 0.5

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0470588, 0.0470588, 0.0470588, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -8.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 592.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="VBoxContainer/VBoxContainer"]
margin_right = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TaskLabel" type="RichTextLabel" parent="VBoxContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 592.0
margin_bottom = 17.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[color=#6c6c6c]Survive as long as you can. Survived [color=#91a47a]0[/color] ticks so far.[/color]"
text = "Survive as long as you can. Survived 0 ticks so far."
fit_content_height = true

[node name="Display" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 21.0
margin_right = 592.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[color=#16c60c]λ[/color]"
text = "[color=#16c60c]λ[/color]"
fit_content_height = true
scroll_active = false

[node name="Control2" type="Control" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 592.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="text_changed" from="Input" to="." method="_on_Input_text_changed"]
[connection signal="text_entered" from="Input" to="." method="_on_Input_text_entered"]
